<resources>
    <string name="app_name">game_of_life</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clone">Clone Board</string>
    <string name="color">Change Color</string>
    <string name="save">Save Current Board</string>
    <string name="open">Open Saved Board</string>
    <string name="numgen_title">Generation: </string>
    <string name="change_speed_title">Change the BufferSpeed</string>
    <string name="current_refresh">Current Refresh Rate: </string>

    <string name="tenSecs">10 seconds</string>
    <string name="fiveSecs">5 seconds</string>
    <string name="oneSecs">1 second</string>
    <string name="superspeed">Super Sonic Speed</string>
</resources>
